# Pint

./: .gitignore  README.md  RunPint.py  __init__.py  __main__.py  claudeEngine.py  claude_engine.py  externalEngine.py  external_engine.py  main.py  model_data.py  openAIEngine.py  open_ai_engine.py  parse_papers.py  prompt_cache.py  prompt_cache_sqlite.py  prompt_data.py  pyproject.toml  requirements.txt  sample_pmids.csv  test_config.xlsx  test_prompts.xlsx
data/: Human phosphorylation datasets 2024.csv
example/: test_config_pdf.xlsx  test_file_list.csv  test_prompts_pdf.xlsx
pubmed_example/: JESEBL_files.csv  pubmed_config.csv  pubmed_prompts.csv
src/pint_lib/: main.py
