[project]
name = "pint-lib"
version = "0.1.0"
description = "AI-powered paper analysis and data extraction tool"
readme = "README.md"
authors = [
    { name = "Peron", email = "peron_ap@icloud.com" }
]
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.54.0",
    "openai>=1.90.0",
    "openpyxl>=3.1.5",
    "pdfminer-six>=20250506",
    "requests>=2.32.4",
]

[project.scripts]
pint_lib = "pint_lib.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
